Use the gap for fixing previous commit
Some area around links was now clickable, fixed by gap

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     align-items: center;
     border: none;
     margin: 0px 0px;
-    gap: 5px;
+    gap: 15px;
 }
 
 .navbar .links a {
@@ -70,7 +70,6 @@ body {
     border: 1px solid #6c2dc7;
     border-radius: 5px;
     padding: 5px;
-    margin: 0px 5px;
 }
 
 .navbar .links li:hover {
